src/objects/OrderApi__Source_Code__c.object
<CustomObject>
    <description>Source Codes link Receipts to marketing activities.</description>
    <fields>
        <fullName>OrderApi__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Only active Source Codes can be linked to new Cash Entries/Invoices.</description>
        <inlineHelpText>Only active Source Codes can be linked to new Cash Entries/Invoices.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Source Codes</relationshipLabel>
        <relationshipName>Source_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Channel__c</fullName>
        <description>**Required** Choose the most appropriate channel for the Source Code.</description>
        <inlineHelpText>**Required** Choose the most appropriate channel for the Source Code.</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Mail</fullName>
                    <default>true</default>
                    <label>Direct Mail</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Peer-to-Peer</fullName>
                </value>
                <value>
                    <fullName>Press Release</fullName>
                </value>
                <value>
                    <fullName>Search Engine Organic</fullName>
                </value>
                <value>
                    <fullName>Search Engine PPC</fullName>
                </value>
                <value>
                    <fullName>Web Advertisement</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Source Code</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Channel__c</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Timeline_View</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Timeline View</label>
    </listViews>
    <nameField>
        <label>Source Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>